--- a/layouts/index.html
+++ b/layouts/index.html
@@ -190,4 +190,89 @@
     </div>
 </section>
 {{/*  end services section  */}}
+
+{{/*  projects section  */}}
+<section class="px-4 py-16">
+    <div class="container mx-auto">
+        <div class="space-y-4 text-center lg:max-w-[690px] mx-auto">
+            <h3 class="font-urbanist font-bold text-[40px] lg:text-[56px] leading-12 lg:leading-16 tracking-[-3%] text-black">Our Works</h3>
+            <p class="font-urbanist font-medium text-lg leading-7 tracking-[1%] text-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras a auctor leo. Morbi eu egestas elit. Aenean sit amet leo eget arcu sodales viverra.</p>
+        </div>
+        <div class="lg:flex justify-center items-center lg:gap-x-5">
+            <div class="lg:w-2/3">
+                {{ $projects_img := "images/projects-img.png" | relURL }}
+                <img src="{{ $projects_img }}" alt="" class="size-full object-contain">
+            </div>
+            <div class="lg:w-[502px] lg:flex flex-col-reverse lg:gap-y-16">
+                <div class="flex gap-x-6 items-center justify-center lg:justify-start">
+                    {{ $right_arrow := "images/dev/right-arrow.svg" | relURL }}
+                    {{ $left_arrow := "images/dev/left-arrow.svg" | relURL }}
+                    <div class="size-10 rounded-full border border-black flex justify-center items-center cursor-pointer">
+                        <div class="w-[11.38px] h-14.[16px]">
+                            <img src="{{ $left_arrow }}" alt="" class="size-full object-contain">
+                        </div>
+                    </div>
+                    <div class="size-10 rounded-full border border-black flex justify-center items-center cursor-pointer">
+                        <div class="w-[11.38px] h-14.[16px]">
+                            <img src="{{ $right_arrow }}" alt="" class="size-full object-contain">
+                        </div>
+                    </div>
+                </div>
+                <div class="space-y-8">
+                    <div class="size-12 flex justify-center items-center rounded-full border border-dark-slate-gray">
+                        <span class="font-urbanist font-extrabold text-xl text-dim-black">01</span>
+                    </div>
+                    <div class="space-y-10">
+                        <div class="space-y-5">
+                            <div class="space-y-1">
+                                <h3 class="font-urbanist font-extrabold text-[40px] leading-12 text-dim-black uppercase">PUNK PIRATES</h3>
+                                <p class="font-urbanist font-medium text-lg leading-[30px] tracking-[1%] text-dim-black">3D online card game combining strategy, deduction, and bluffing, set in a unique cyberpunkpirate universe.</p>
+                            </div>
+                            <ul class="space-y-5">
+                                <li class="flex gap-x-3 items-center">
+                                    {{ $list := "images/dev/list-icon.svg" | relURL }}
+                                    <div>
+                                        <img src="{{ $list }}" class="size-5 object-contain">
+                                    </div>
+                                    <span class="font-urbanist text-lg leading-[30px] text-dim-black">Offline income calculations</span>
+                                </li>
+                                <li class="flex gap-x-3 items-center">
+                                    {{ $list := "images/dev/list-icon.svg" | relURL }}
+                                    <div>
+                                        <img src="{{ $list }}" class="size-5 object-contain">
+                                    </div>
+                                    <span class="font-urbanist text-lg leading-[30px] text-dim-black">Offline income calculations</span>
+                                </li>
+                                <li class="flex gap-x-3 items-center">
+                                    {{ $list := "images/dev/list-icon.svg" | relURL }}
+                                    <div>
+                                        <img src="{{ $list }}" class="size-5 object-contain">
+                                    </div>
+                                    <span class="font-urbanist text-lg leading-[30px] text-dim-black">Offline income calculations</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="flex gap-x-4 items-center">
+                            <a 
+                                href=""
+                                class="px-8 py-3 rounded-full inline-flex gap-x-2 justify-center items-center bg-black">
+                                <span class="font-urbanist font-bold leading-6 text-white">iOS</span>
+                                {{ $apple := "images/dev/apple-icon.svg" | relURL }}
+                                <img src="{{ $apple }}" class="size-5">
+                            </a>
+                            <a 
+                                href=""
+                                class="px-8 py-3 rounded-full inline-flex gap-x-2 justify-center items-center bg-green">
+                                {{ $android := "images/dev/android-icon.svg" | relURL }}
+                                <img src="{{ $android }}" class="size-5">
+                                <span class="font-urbanist font-bold leading-6 text-white">Android</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+{{/*  end projects section  */}}
 {{ end }}
