--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,5 +1,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+{{/*  favicon  */}}
+{{ $favicon := "images/favicon.ico" | relURL }}
+<link rel="shortcut icon" href="{{ $favicon }}" type="image/x-icon">
+
+{{/*  title  */}}
 <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ .Page.Title }} - {{ site.Title }}{{ end }}</title>
 
 {{/*  fonts  */}}
