--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,6 +1,4 @@
-{{ $swiper := resources.Get "js/swiper.min.js" }}
-{{ $main := resources.Get "js/main.js" }}
-{{ $bundle := slice $swiper $main | resources.Concat "js/bundle.js" }}
+{{ $bundle := resources.Get "js/main.js" }}
 {{ with $bundle }}
   {{ $opts := dict
     "minify" hugo.IsProduction
