--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,7 +3,7 @@
         <div class="lg:grid lg:grid-cols-3">
             <div class="lg:max-w-[411px]">
                 <div>
-                    <a href="{{ site.BaseURL }}" class="w-[158px] h-10 block"><img src="{{ site.Params.logo | relURL }}" alt="{{ site.Title }} Logo" class="size-full object-contain"></a>
+                    <a href="{{ site.BaseURL }}" class="w-[158px] h-10 object-contain block"><img src="{{ site.Params.logo | relURL }}" alt="{{ site.Title }} Logo" class="size-full object-contain"></a>
                 </div>
                 <div class="space-y-7 mt-5 hidden">
                     <p class="font-urbanist font-medium leading-7 tracking-[1%] text-white/60">Slowyn Games is built on a decentralized production model, designed to offer flexibility, responsiveness, and instant access to top specialized talent from around the world.</p>
@@ -46,7 +46,7 @@
                                 <img src='{{ "images/dev/email-icon.svg" | relURL }}' class="size-full object-contain">
                             </div>
                         </div>
-                        <div class="flex flex-col gap-y-3">
+                        <div class="flex flex-col">
                             <p class="font-urbanist font-semibold text-[13px] tracking-[4%] text-white/60 uppercase">Email Us</p>
                             <a href="mailto:contact@slowyngames.com" class="font-urbanist font-semibold text-white">contact@slowyngames.com</a>
                         </div>
@@ -57,18 +57,18 @@
                                 <img src='{{ "images/dev/location-icon.svg" | relURL }}' class="size-full object-contain">
                             </div>
                         </div>
-                        <div class="flex flex-col gap-y-3">
+                        <div class="flex flex-col">
                             <p class="font-urbanist font-semibold text-[13px] tracking-[4%] text-white/60 uppercase">Location<p>
-                            <p class="font-urbanist font-semibold text-white">SLOWYN GAMES 60 rue François 1er 75008 – Paris France</p>
+                            <p class="font-urbanist font-semibold text-white">SLOWYN GAMES <br> 60 rue François 1er <br> 75008 – Paris <br> France</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="my-16 bg-white py-[1px] w-full"></div>
+        <div class="my-16 bg-white/10 py-[1px] w-full"></div>
 
-        <div class="flex flex-col lg:flex-row justify-center lg:justify-between items-center gap-y-5 font-urbanist font-medium text-lg leading-6 text-white/60">
+        <div class="flex flex-col lg:flex-row-reverse justify-center lg:justify-between items-center gap-y-5 font-urbanist font-medium text-lg leading-6 text-white/60">
             <ul class="flex">
                 <li><a href="">Copyright |</a></li>
                 <li><a href="">&nbsp;Privacy Policy |</a></li>
