--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header class="fixed w-full bg-navy z-50">
     <div class="container mx-auto px-4 py-2 flex justify-between items-center w-full">
         <nav>
-            <a href="{{ site.BaseURL }}" class="w-[126.42px] h-8"><img src="{{ site.Params.logo | relURL }}" alt="{{ site.Title }} Logo" class="size-full object-contain"></a>
+            <a href="{{ site.BaseURL }}" class="w-[158.03px] h-10"><img src="{{ site.Params.logo | relURL }}" alt="{{ site.Title }} Logo" class="size-full"></a>
         </nav>
         <button class="size-8 cursor-pointer toggle-menu lg:hidden">
             {{ $hamburger := "images/dev/hamburger.svg" | relURL }}
@@ -204,7 +204,7 @@
             {{ with site.Params.header.cta }}
             <a 
                 href="{{ .url }}"
-                class="py-3 px-8 bg-light-sky font-urbanist font-bold text-sm leading-6 text-white inline-flex items-center justify-center">
+                class="w-40 h-10 bg-light-sky font-urbanist font-bold text-sm leading-6 text-white inline-flex items-center justify-center">
                 <span class="uppercase">{{ .label }}</span>
                 <svg class="size-3 text-inherit ml-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
                     <path class="fill-current" d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
