hero bg position fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,6 +27,10 @@
 }
 
 /* custom styles */
+*::selection {
+    @apply bg-light-sky/50 text-white;
+}
+
 .border-gradient {
     @apply relative;
 }
