--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 {{/*  favicon  */}}
-{{ $favicon := "images/favicon.ico" | relURL }}
+{{ $favicon := "images/new-favicon.ico" | relURL }}
 <link rel="shortcut icon" href="{{ $favicon }}" type="image/x-icon">
 
 {{/*  title  */}}
